@startuml state-01-order
' Sơ đồ trạng thái — Vòng đời đơn hàng (order.status)
' Verify vs backend/src/modules/orders/services/orders-service.js
'   (STATUS, _canCancel L21, _canConfirmReceived L29, updateOrderStatus L616)
' Verify vs backend/src/modules/admin/services/admin-order-service.js
'   (updateOrderStatus L199, adminCancelOrder L212)
hide empty description
skinparam dpi 300
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam state {
  BackgroundColor #DAE8FC
  BorderColor #6C8EBF
  FontColor #000000
  ArrowColor #4D4D4D
}

[*] --> pending

state "Chờ xử lý\n(pending)" as pending
state "Đang xử lý\n(processing)" as processing
state "Đang giao\n(shipped)" as shipped
state "Đã giao\n(delivered)" as delivered
state "Đã hủy\n(cancelled)" as cancelled

pending    --> processing : IPN-return thành công,\nstaff xác nhận đơn

processing --> shipped    : staff cập nhật giao vận

shipped    --> delivered  : staff cập nhật trạng thái,\nkhách xác nhận đã nhận
processing --> delivered  : staff cập nhật trạng thái,\nkhách xác nhận đã nhận

pending    --> cancelled  : khách hủy, staff hủy, tạo đơn mới\n[status ∈ {pending, processing}] / hoàn kho
processing --> cancelled  : khách hủy, staff hủy\n[status ∈ {pending, processing}] / hoàn kho
shipped    --> cancelled  : staff hủy / không hoàn kho

delivered -[#CC0000,dashed]-> cancelled : <color:#CC0000>✗ [status = delivered] — 400</color>

delivered --> [*]
cancelled --> [*]

/'
note bottom
  • Staff (updateOrderStatus) là back-office, điều chỉnh trạng thái khá tự do,
    NHƯNG bị chặn 2 cung phi nghiệp vụ (sau fix F9–F14):
      – delivered → cancelled: từ chối 400 (hàng đã giao, không hoàn kho ảo).
      – cancelled → * (hồi sinh): từ chối 422 — cancelled là TERMINAL.
  • Khách hủy (cancelOrder) chỉ từ pending/processing (_canCancel);
    staff còn hủy được đơn shipped qua updateOrderStatus (KHÔNG hoàn kho).
  • Hoàn kho: chỉ khi hủy từ pending/processing. shipped/delivered KHÔNG hoàn
    (hàng đã rời kho) — INV-STK-6.
  • Thanh toán online late-success trên đơn đã cancelled → payment-service
    GIỮ nguyên cancelled (INV-PAY-3), không hồi sinh đơn.
  • Xác nhận nhận hàng chỉ từ shipped/processing (_canConfirmReceived).
  • COD: khi delivered → paymentStatus tự động chuyển 'paid'.
end note
'/
@enduml
